spacing fixes

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -133,7 +133,7 @@ footer {
 }
 
 h1 {
-    margin: 1rem 0;
+    margin-block: var(--spacing-30);
     font-size: 1.5rem;
     letter-spacing: -1%;
 }
@@ -158,7 +158,7 @@ h3 {
 }
 
 p {
-    margin-block: var(--spacing-30);
+    margin-block: 0 var(--spacing-30);
 }
 
 p,
